2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.41 (tag v0.41)

	* configure.ac (AC_INIT): Bump version to "0.41" for release.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Use "PostgreSQL 8.2" as ‘standard_conforming_strings’ inception.

	* doc/ref.texh (qcons quoting): For ‘standard_conforming_strings’
	inception and blurb, change imprecise "8.x" to "8.2" throughout.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Index type converters; include array variants.

	* doc/Makefile.am (coltypes.texi): Output ‘@converter NAME’
	for each line; reformat the table into four columns; generate
	blurb for array variants; output list of array variants as well.
	* doc/guile-pg.texi (converter): New @macro.
	* doc/ref.texh (Consulting Existing Type Converters):
	Remove superfluous @example / @end example.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Combine indices; spiff ‘er’ entries.

	* doc/guile-pg.texi (er): Use ‘@defindex’,
	not ‘@defcodeindex’; combine into concept index.
	(vr, fn): Combine into concept index.
	(bummer): New @macro.
	(Top): Combine index menu entries into simply "Index".
	(Procedure Index, Error Index): Delete.
	(Index): New node/unnumbered.
	* doc/ref.texh: Do ‘s/@erindex/@bummer/g’.
	(Large Objects): Add ‘@code’ around ‘fport_write’ @bummer;
	omit now-redundant "error" from "memory" @bummer.
	(qcons quoting): Use ‘@vindex’ for ‘sql-quote-auto-E?’.

2011-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document builtin type converters.

	* doc/Makefile.am (guile_pg_TEXINFOS): Add coltypes.texi.
	(EXTRA_DIST): Likewise.
	(coltypes.texi): New target.
	* doc/ref.texh (Consulting Existing Type Converters):
	Add heading "Builtin Converters" and blurb;
	@include coltypes.texi in a @example block.

2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Use INSTALL.UTF-8 from gnulib for INSTALL.

	* autogen.sh (actually): New func; use it
	to copy INSTALL.UTF-8 from gnulib to INSTALL.
